--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,12 @@
 @plugin "daisyui" {
   themes: all;
 }
+
+body {
+  background-image: url("/pokemons.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100vh;
+}
