--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,16 @@
   themes: all;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url("/pokemons.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 100vh;
 }
